--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,13 @@
 */
 
 @font-face {
-    font-family: "shoreline";
-    src: url(../font/shoreline.OTF);
+    font-family: "anisha";
+    src: url(../font/Anisha.otf);
+}
+
+@font-face {
+    font-family: "Baskerville";
+    src: url(../font/Baskerville.ttf);
 }
 
 body {
@@ -29,7 +34,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Raleway";
+    font-family: "Barkerville";
     font-weight: 300;
     color: #333;
 }
@@ -180,12 +185,18 @@ hr {
   SECTION WRAPS
   ---------------------------------------------------*/
 
+.title-section {
+    font-family: "anisha";
+    font-size: 30pt;
+    margin-bottom: 20px;
+}
+
 
 /* Header Wrap */
 
 .img-name {
-    width: 700px;
-    margin-top: 200px;
+    width: 400px;
+    margin-top: 40px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -194,7 +205,7 @@ hr {
         background-attachment: relative;
         background-position: center center;
         width: 300px;
-        margin-top: 200px;
+        margin-top: 50px;
     }
 }
 
@@ -204,7 +215,7 @@ hr {
 }
 
 #headerwrap {
-    background: url(../img/couple/cover_img.jpg) no-repeat center top;
+    background: url(../img/couple/cover_img.png) no-repeat center top;
     /* margin-top: 100px; */
     padding-top: 140px;
     text-align: center;
@@ -238,15 +249,13 @@ hr {
 }
 
 .couple-name .name-couple {
-    font-family: "shoreline";
-    font-weight: 800;
+    font-family: "anisha";
+    font-size: 35pt;
     margin-top: 50px;
-    margin-bottom: 50px;
 }
 
-.couple-name .name-parent {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-weight: 500;
+.bride {
+    margin: 50px;
 }
 
 
