--- a/css/style.css
+++ b/css/style.css
@@ -157,9 +157,9 @@ hr {
     display: block;
     font: "Baskerville" 11px/18px;
     text-decoration: none;
-    padding-top: 18px;
-    padding-bottom: 18px;
-    /* padding: 18px 20px 18px 20px; */
+    /* padding-top: 18px;
+    padding-bottom: 18px; */
+    padding: 18px 18px 18px 18px;
     /* border-left: 1px solid #222; */
 }
 
@@ -401,7 +401,7 @@ p {}
 /* Copyright Wrap */
 
 .copyrights {
-    margin: 50px;
+    margin-top: 50px;
     min-width: 330px;
 }
 
