--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,17 @@ hr {
     padding: 0;
 }
 
+.my-custom-scrollbar {
+    color: white;
+    position: relative;
+    height: 200px;
+    overflow: auto;
+}
+
+.table-wrapper-scroll-y {
+    display: block;
+}
+
 
 /*---------------------------------------------------
   3.1 Topbar
